# target-zoho-inventory

./: README.md  meltano.yml  pyproject.toml
payload_example/: assembly_data.singer  data.singer
target_zoho_inventory/: auth.py  client.py  sinks.py  target.py
target_zoho_inventory/tests/: __init__.py  test_core.py
